--- a/app/index.html
+++ b/app/index.html
@@ -55,7 +55,9 @@
 
     <!-- importando javascript -->
     <script src="js/models/Negociacao.js"></script>
+    <script src="js/controllers/NegociacaoController.js"></script>
     <script src="js/app.js"></script>
+    
 
 </body>
 </html>
