--- a/app/index.html
+++ b/app/index.html
@@ -42,14 +42,14 @@
     <!-- jquery, que ajudará na compatibilidade do doom com dispositivos legados -->
     <script src="lib/jquery.min.js"></script>
 
-    <!-- importando arquivos js que serão gerados pelo typescript -->
-    <script src="js/models/Negociacao.js"></script>
-    <script src="js/controllers/NegociacaoController.js"></script>
-    <script src="js/models/Negociacoes.js"></script>
-    <script src="js/views/View.js"></script>
-    <script src="js/views/NegociacoesView.js"></script>
-    <script src="js/views/MensagemView.js"></script>
-    <script src="js/app.js"></script>
-    
+    <!-- responsavel por carregar o loader dos scripts js -->
+    <script src="lib/system.js"></script>
+
+    <!-- indica qual e o primeiro script a ser carregado, que por sua vez carregara todo o resto da aplicacao -->
+    <script>
+        System.defaultJSExtensions = true;
+        System.import('js/app.js').catch(err => console.error(err));
+   </script>
+
 </body>
 </html>
