--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
     <title>Negociações</title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/bootstrap-theme.css">
+    <link rel="shortcut icon" href="https://code.visualstudio.com/favicon.ico">
 </head>
 
 <body class="container">
